App and templating

--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} 
   {% block title %} About {% endblock %} 
 {% block content %}
-  <h2>About Page</h2>
+  <h2>Posts List</h2>
   <p>Baack to <a href="/">Home</a> page</p>
 {% endblock %}
