--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  </head>
-  <body>
-    <h2>Home Page</h2>
-    <p>Checkout my <a href="/about">about</a> page</p>
-  </body>
-</html>
+{% extends "layout.html" %} 
+  {% block title %} Home {% endblock %} 
+{% block content %}
+  <h2>Home Page</h2>
+{% endblock %}
