--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -1,6 +1,18 @@
 {% extends "layout.html" %} 
   {% block title %} About {% endblock %} 
 {% block content %}
-  <h2>Posts List</h2>
+<section>
+  <h1>Posts List</h1>
+  {% for post in posts %}
+
+  <article class="post">
+    <h2>{{post.title}}</h2>
+    <p>{{post.date}}</p>
+    <p>{{post.body}}</p>
+  </article>
+  
+  {% endfor %}
+</section>
+  
   <p>Baack to <a href="/">Home</a> page</p>
 {% endblock %}
