--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} Django App {% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}?v=1.0.1" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}?v=1.0.2" />
   </head>
   <body>
     <nav>
       <a href="/">🏠</a>| <a href="/about">𝍕</a>|
-      <a href="/posts">📰</a>
+      <a href="{% url 'posts:list' %}">📰</a>
     </nav>
     <main>{% block content %}{% endblock %}</main>
   </body>
