--- a/posts/templates/posts/posts_list.html
+++ b/posts/templates/posts/posts_list.html
@@ -7,6 +7,7 @@
 
   <article class="post">
     <h2>{{post.title}}</h2>
+    <a href="{% url 'posts:page' slug=post.slug %}"">Link</a>
     <p>{{post.date}}</p>
     <p>{{post.body}}</p>
   </article>
